# genldparser

./: genldparser.cabal
licenses/: BSD3_LICENSE
src/: Main.hs
